styled: changed font, word choice, and colors to better match theme

--- a/public/fonts/Colossalis Regular/readme.html
+++ b/public/fonts/Colossalis Regular/readme.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="refresh" content="5;url=https://fontsgeek.com/coverack-font?ref=readme">
-    <title>CoverackFontsgeek</title>
+    <meta http-equiv="refresh" content="5;url=http://fontsgeek.com/fonts/colossalis-regular?ref=readme">
+    <title>Colossalis RegularFontsgeek</title>
     <style>
 /* -------------------------------------
    GLOBAL
@@ -168,10 +168,10 @@
             <table>
               <tr>
                 <td>
-                    <h1>Coverack</h1>
+                    <h1>Colossalis Regular</h1>
                   <p>This font was downloaded from <a href="http://fontsgeek.com?ref=readme">fontsgeek.com</a> . You can visit <a href="http://fontsgeek.com?ref=readme">fontsgeek.com</a> for thousands of free fonts.</p>
-                  <p><a href="http://fontsgeek.com/coverack-font?ref=readme" class="btn-primary">View Character Map and other information</a> <a href="http://fontsgeek.com?ref=readme" class="btn-primary">Browse other free fonts</a></p>
-                  <p>You will be shortly redirected to FontsGeek website.</p>
+                  <p><a href="http://fontsgeek.com/fonts/colossalis-regular?ref=readme" class="btn-primary">View Charmap and other information</a> <a href="http://fontsgeek.com?ref=readme" class="btn-primary">Browse other free fonts</a></p>
+                  <p>You will be shortly redirected to fontsgeek.</p>
                 </td>
               </tr>
             </table>
